# pynixf

./: README.md  example.py  flake.nix  meson.build  nixf.pyi  package.nix  pyproject.toml
.github/workflows/: pytest.yml
src/: meson.build  nixf_python.cpp
test/: test_nixf_parse.py
